--- a/BaiTap1/bai-II-a/test.ipynb
+++ b/BaiTap1/bai-II-a/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6bfa0a85-ec8c-4c17-96d8-f65256416816",
    "metadata": {},
    "outputs": [
@@ -40,11 +40,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "eb42121e-2d65-4f24-ab83-4c0c9e0570ea",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expected: 22\n",
+      "22\n",
+      "Expected: -10\n",
+      "-10\n"
+     ]
+    }
+   ],
+   "source": [
+    "!g++ baia.cpp -o baia\n",
+    "\n",
+    "!./baia < t1.inp >t1.out\n",
+    "!echo \"Expected: 22\"\n",
+    "!cat t1.out\n",
+    "\n",
+    "!./baia < t2.inp >t2.out\n",
+    "!echo \"Expected: -10\"\n",
+    "!cat t2.out\n"
+   ]
   }
  ],
  "metadata": {
@@ -63,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
