--- a/BaiTap1/bai-II-d/test.ipynb
+++ b/BaiTap1/bai-II-d/test.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6bfa0a85-ec8c-4c17-96d8-f65256416816",
+   "execution_count": 2,
+   "id": "bec59957",
    "metadata": {},
    "outputs": [
     {
@@ -16,13 +16,13 @@
    ],
    "source": [
     "%%writefile t1.inp\n",
-    "11"
+    "1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9256ed16-31f7-464e-8550-81a804a17348",
+   "id": "ca615f7b",
    "metadata": {},
    "outputs": [
     {
@@ -35,36 +35,36 @@
    ],
    "source": [
     "%%writefile t2.inp\n",
-    "10"
+    "-1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "eb42121e-2d65-4f24-ab83-4c0c9e0570ea",
+   "execution_count": 8,
+   "id": "238880f7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Expected: 22\n",
-      "22\n",
-      "Expected: -10\n",
-      "-10\n"
+      "Expected: 2\n",
+      "2\n",
+      "Expected: -2\n",
+      "-2\n"
      ]
     }
    ],
    "source": [
-    "!g++ baia.cpp -o baia\n",
+    "!g++ baid.cpp -o baid\n",
     "\n",
-    "!./baia < t1.inp >t1.out\n",
-    "!echo \"Expected: 22\"\n",
+    "!./baid < t1.inp > t1.out\n",
+    "!echo \"Expected: 2\"\n",
     "!cat t1.out\n",
     "\n",
-    "!./baia < t2.inp >t2.out\n",
-    "!echo \"Expected: -10\"\n",
-    "!cat t2.out\n"
+    "!./baid < t2.inp > t2.out\n",
+    "!echo \"Expected: -2\"\n",
+    "!cat t2.out"
    ]
   }
  ],
@@ -73,6 +73,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
